# Triangles

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md  tests_vis.md  tmp_cfg.dot
.cache/clangd/index/: base_obj.hpp.13C64BB08F007556.idx  collision_handler.cpp.8019F796007DB737.idx  collision_handler.hpp.BC0003EEC5AD285D.idx  dump_funcs.cpp.1931988FAAB8D0BA.idx  error_handler.hpp.6E4F2CABE06E939F.idx  geometry_obj.hpp.1EA42890A6A016B3.idx  geometry_obj.hpp.3CDDC943D2565CD6.idx  line3.hpp.1326B04F76946842.idx  logger.cpp.1C69917DF3B2532A.idx  logger.hpp.85AFFB05405BF4A7.idx  logger_appearance.hpp.7AB60736891F31A2.idx  main.cpp.9953A73F9B7A18F7.idx  plane3.cpp.ACFA6A27CB51E7A3.idx  plane3.hpp.1E49D522C5A78081.idx  point3.hpp.27C7DBFE111A453A.idx  point3.hpp.4122C0BBEA1C2EBE.idx  point3.hpp.AEA6002D9A2D80B8.idx  primitive.hpp.9A2AAA8999216E87.idx  primitives.cpp.6EEF3D0535C6A63B.idx  primitives.hpp.E99E4E930BB2FD56.idx  vector3.cpp.7E718ADD18A3B87F.idx  vector3.hpp.3DA0F13FA470483B.idx  vector3.hpp.9F4BB13A8D197AB7.idx  vector3.hpp.C3341C9C92894249.idx
log/: Logfile.html
source/: gtest_triangles.cpp  main.cpp  test_general.cpp
source/BvhTestGen/: CMakeLists.txt
source/BvhTestGen/include/BvhTestGen/: bvh_test_gen.hpp
source/BvhTestGen/src/: bvh_test_gen.cpp  main.cpp
source/Geometry/: CMakeLists.txt
source/Geometry/include/Geometry/common/: geometry_obj.hpp
source/Geometry/include/Geometry/math/: double_handle.hpp  math.hpp  point3.hpp  vector3.hpp
source/Geometry/include/Geometry/math_engine/: aabb.hpp  bvh_tree.hpp  collision_handler.hpp
source/Geometry/include/Geometry/primitives/: line3.hpp  plane3.hpp  point3.hpp  primitive.hpp  primitives.hpp
source/Geometry/include/Geometry/shapes/: shapes.hpp
source/Geometry/src/math/: vector3.cpp
source/Geometry/src/math_engine/: aabb.cpp  aabb_debug.cpp  bvh_tree.cpp  bvh_tree_debug.cpp  collision_handler.cpp  collision_table.cpp
source/Geometry/src/primitives/: dump_funcs.cpp  plane3.cpp  primitives.cpp
source/Geometry/src/shapes/: dump_funcs.cpp  shapes.cpp
tests/: run.py
tests/bvh_tests/: tests_config.txt
tests/semen_tests/answers/: f000017.txt
tests/semen_tests/tasks/: f000014.txt
