cmake_minimum_required(VERSION 3.12)
project(Geometry LANGUAGES CXX)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON) # to generate compile_commands.json

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

#--- GET LOG DIR --------------------------------------------------------
if(NOT DEFINED LOG_DIR)
    set(LOG_DIR ${CMAKE_CURRENT_SOURCE_DIR}/log)
    message(STATUS "Using and creating default LOG_DIR: ${LOG_DIR}")
    file(MAKE_DIRECTORY ${LOG_DIR})
else()
    message(STATUS "Using LOG_DIR from parent: ${LOG_DIR}")
endif()
#------------------------------------------------------------------------

file(GLOB_RECURSE SOURCES "src/*.cpp")

add_library(${PROJECT_NAME} STATIC
    ${SOURCES}
)

target_include_directories(${PROJECT_NAME} PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
    $<INSTALL_INTERFACE:include>
)

target_link_libraries(${PROJECT_NAME} PRIVATE
    RLogSU
)

target_compile_definitions(${PROJECT_NAME} PRIVATE MODULE_NAME="${PROJECT_NAME}")


if(DEBUG_MODE)
    target_compile_definitions(${PROJECT_NAME} PRIVATE DEBUG_MODE)
    message(STATUS "${PROJECT_NAME}: DEBUG_MODE ENABLED")

    target_compile_options(Geometry PRIVATE
        -g
        -O0
    )


else()

    message(STATUS "${PROJECT_NAME}: DEBUG_MODE DISABLED")

endif()
